[package]
name = "linfa-neighbors"
version = "0.1.0"
authors = ["Mason Stallmo <masonstallmo@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

keywords = ["machine-learning", "linfa", "unsupervised"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = { version = "0.13" , features = ["rayon", "serde", "approx"]}
